admission/ValidatingAdmissionPolicy/policies/immutable-true/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: configmap-immutable-true
  annotations:
    security.kubeapt.io/displayName: 'Immutable True'
    security.kubeapt.io/description: immutable must be set to true to prevent runtime tampering.
    security.kubeapt.io/resource: ConfigMaps
    security.kubeapt.io/severity: "5"
    security.kubeapt.io/remediation: "Set immutable=true. Fields: immutable."
    policies.kolteq.com/validatingAdmissionPolicy: 0d5a821c-f443-5af1-81f0-ffdf33f19de4
  labels:
    check-configmap-immutable-true.security.kolteq.com/audit: 'false-true'
    check-configmap-immutable-true.security.kolteq.com/enforce: 'false-true'
    check-configmap-immutable-true.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - configmaps
  validations:
  - expression: |
      has(object.immutable) && object.immutable == true
    message: |
      immutable must be set to true to prevent runtime tampering.
